--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="name"><li><a>Deep Meghani</a></li></div>
 	</div>
 	<div class="intro">
-		<img class="imagestyle" src="/img/personal.JPG">
+		<img class="imagestyle" src="img/personal.JPG">
 		<h1 style="font-size: 100px; font-family: 'Times New Roman';">Welcome</h1>
 		<h2 style="font-size: 30px; font-family:Arial;">My name is Deep Meghani</h2>
 		<h3 style="font-size:25px; font-family:Arial;">I am a Full-Stack Developer</h3>
@@ -32,7 +32,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 				  <div class="flip-card-front">
-				    <img src="/img/edu.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
+				    <img src="img/edu.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
 				  </div>
 				  <div class="flip-card-back">
 				    <h1>Education</h1> 
@@ -47,7 +47,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 				  <div class="flip-card-front">
-				    <img src="/img/courses.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
+				    <img src="img/courses.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
 				  </div>
 				  <div class="flip-card-back">
 				    <h1>Courses</h1> 
@@ -64,7 +64,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 				  <div class="flip-card-front">
-				    <img src="/img/awards.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
+				    <img src="img/awards.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
 				  </div>
 				  <div class="flip-card-back">
 				    <h1>Awards</h1> 
@@ -78,7 +78,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 				  <div class="flip-card-front">
-				    <img src="/img/extra.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
+				    <img src="img/extra.png" alt="Avatar" style="width:280px;height:320px;border-radius: 20px;">
 				  </div>
 				  <div class="flip-card-back">
 				    <h1>Student Club</h1> 
