--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul>
 			<li><a href="#education"><button class="btn" style="font-family: 'Courier New';">Education</button></a></li>
 			<li><a href="#experience"><button class="btn" style="font-family: 'Courier New';">Experience</button></a></li>
-			<li><a href="./SDE-Resume.pdf" download="DeepMeghaniResume"><button class="btn" style="font-family: 'Courier New';">Resume</button></a></li>
+			<li><a href="./Project_Resume.pdf" download="DeepMeghaniResume"><button class="btn" style="font-family: 'Courier New';">Resume</button></a></li>
 			<li><a href="#skills"><button class="btn" style="font-family: 'Courier New';">Skills</button></a></li>
 			<li><a href="#connect"><button class="btn" style="font-family: 'Courier New';">Contact</button></a></li>
 		</ul>
